// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VExpansionPanelContent.js should render an expanded component and match snapshot 1`] = `

<li tabindex="0"
    class="v-expansion-panel__container"
>
  <div class="v-expansion-panel__body"
       style="display: none;"
  >
  </div>
</li>

`;

exports[`VExpansionPanelContent.js should render an expanded component with lazy prop and match snapshot 1`] = `

<li tabindex="0"
    class="v-expansion-panel__container"
>
  <div class="v-expansion-panel__body"
       style="display: none;"
  >
  </div>
</li>

`;

exports[`VExpansionPanelContent.js should render component and match snapshot 1`] = `

<li tabindex="0"
    class="v-expansion-panel__container"
>
  <div class="v-expansion-panel__header">
    <span>
      header
    </span>
    <div class="v-expansion-panel__header__icon">
      <span>
        actions
      </span>
    </div>
  </div>
  <div class="v-expansion-panel__body"
       style="display: none;"
  >
    <span>
      default
    </span>
  </div>
</li>

`;

exports[`VExpansionPanelContent.js should respect hideActions prop 1`] = `

<li tabindex="0"
    class="v-expansion-panel__container"
>
  <div class="v-expansion-panel__header">
    <span>
      header
    </span>
  </div>
  <div class="v-expansion-panel__body"
       style="display: none;"
  >
  </div>
</li>

`;

exports[`VExpansionPanelContent.js should toggle panel on header click 1`] = `

<li tabindex="0"
    class="v-expansion-panel__container v-expansion-panel__container--active"
>
  <div class="v-expansion-panel__header">
    <span>
      header
    </span>
    <div class="v-expansion-panel__header__icon">
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
  <div class="v-expansion-panel__body expand-transition-enter expand-transition-enter-active"
       style="overflow: hidden; height: 0px; display: block;"
  >
  </div>
</li>

`;
